# telephony

./: .gitignore  README.md  docker-compose.yaml
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
agent/src/voice_agent/: main.py  pipeline.py
agent/src/voice_agent/services/: factory.py  whisper_cpp_stt.py
agent/src/voice_agent/tools/: handlers.py
agent/src/voice_agent/transports/: __init__.py  ari.py
agent/whisper/: Dockerfile  entrypoint.sh
config/: ari.conf  asterisk.conf  extensions.conf  modules.conf  pjsip.conf  sample-websocket_client.conf  websocket_client.conf
docs/: echo-test.md  native-asterisk-mac.md
scripts/: run-asterisk-mac.sh
