[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pipecat-ai[openai,piper,whisper,websocket]>=0.0.106",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# Imports follow load_dotenv() and HF cache env setup.
"src/voice_agent/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
